# rag-pipeline

./: .dockerignore  .env.template  .gitignore  .reset.ps1  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  main.py
app/api/: deps.py  routes.py
app/core/: celery_app.py  config.py  database.py  errors.py  init_db.py
app/models/: __init__.py  entities.py
app/schemas/: artifacts.py  capabilities.py  common.py  jobs.py  pipelines.py  projects.py  retrievers.py
app/services/: artifacts.py  blobstore.py  capabilities.py  example_profiles.py  jobs.py  pipeline_advisory_validator.py  pipeline_validator.py  plugins.py  rag_adapter.py  runtime_objects.py
app/workers/: tasks.py
docs/: DEVELOPERS_GUIDE.md  DEVOPS_GUIDE.md  rag_api_requirements_v3.docx
docs/example-profiles/: PIPELINE_EXAMPLES_RUNNER.md  README.md  catalog.v1.json
example_docs/: 07_md_table_summary_input_ru.md  08_result.xlsx  15_test.html  Digitme Презентация.pptx  KP_IT_IB_Strategy_Recalc_v7_AppC.docx  QA_data.json  data.csv  interview.txt  quotes.toscrape.com_index.md  terms&defs.txt  Параметризованные задачи.docx
examples/pipeline_examples/: manifest.v1.yaml
scripts/: check_parity_drift.py  generate_pipeline_example_manifest.py  run_example_conformance.py  run_pipeline_examples.py
tests/: conftest.py  test_api_contract.py  test_blobstore.py  test_errors.py  test_init_db.py  test_jobs_payloads.py  test_pipeline_example_cli.py  test_pipeline_example_export.py  test_pipeline_example_manifest.py  test_pipeline_example_runner.py  test_rag_adapter.py
(+5 files in other folders)
